--- a/startbootstrap-grayscale-gh-pages/index.html
+++ b/startbootstrap-grayscale-gh-pages/index.html
@@ -19,17 +19,17 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Avatar</a>
+                <a class="navbar-brand js-scroll-trigger" href="index.html#page-top">Avatar</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Elements
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#fire">Fire</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#air">Air</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#water">Water</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#earth">Earth</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fire.html">Fire</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="air.html">Air</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="water.html">Water</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="earth.html">Earth</a></li>
                     </ul>
                 </div>
             </div>
