--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Avatar</h1>
                     <h2 class="mx-auto my-0 text-uppercase">The Last Airbender</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about"><img src="assets/img/fire.png" class="elecon"></a> <a class="btn btn-primary js-scroll-trigger" href="#about"><img src="assets/img/air.png" class="elecon"></a>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about"><img src="assets/img/water.png" class="elecon"></a> <a class="btn btn-primary js-scroll-trigger" href="#about"><img src="assets/img/earth.png" class="elecon"></a>
+                    <a class="btn btn-primary js-scroll-trigger" href="fire.html"><img src="assets/img/fire.png" class="elecon"></a> <a class="btn btn-primary js-scroll-trigger" href="air.html"><img src="assets/img/air.png" class="elecon"></a>
+                    <a class="btn btn-primary js-scroll-trigger" href="water.html"><img src="assets/img/water.png" class="elecon"></a> <a class="btn btn-primary js-scroll-trigger" href="earth.html"><img src="assets/img/earth.png" class="elecon"></a>
                 </div>
             </div>
         </header>
@@ -61,13 +61,13 @@
         <!-- Contact-->
         <section class="contact-section bg-black">
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-youtube"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-instagram"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-twitch"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-snapchat"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a class="mx-2" href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a class="mx-2" href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="mx-2" href="https://www.twitch.tv" target="_blank"><i class="fab fa-twitch"></i></a>
+                    <a class="mx-2" href="https://www.snapchat.com" target="_blank"><i class="fab fa-snapchat"></i></a>
+                    <a class="mx-2" href="https://github.com/lapoint-be/Final.git" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
