Closer to finalized

--- a/air.html
+++ b/air.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
-  <body class="bg-warning">
+  <body style="background-color: #BDB246;">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="index.html#page-top">Avatar</a>
@@ -29,5 +29,42 @@
             </div>
         </div>
     </nav>
+    <section class="wikitext">
+      <img src="assets/img/air.png" alt="Symbol of Airbenders" class="bendsymbols">
+      <h1 class="mx-auto my-0">Airbending</h1>
+      <p>
+        Nearly wiped out of existence by Sozin at the beginning of the Hunred Year War, Airbenders focus primarily on the more spiritualistic nature and avoid conflict as much as possible.
+        While named the Air Nomads, they're are not actually nomadic with the majority of their population living in the monastaries devoted to each of the cardinal directions. These monastaries
+        are nearly impossible to reach if the traveller isn't an airbender, although Sozin managed to utilize the power of the comet to reach and raze each of the temples which left Aang as the
+        last living airbender
+      </p>
+      <h2>Description</h2>
+      <p>
+        Airbenders have been primarily pacifist since the very beginning of their bending tradition, due to this nature and their monastic lifestyle few if any airbenders turn towards violence.
+        They first learned bending techniques from the air bison and how those moved through the sky, they focus on flowing movements and nimble dodges when forced to fight. Many airbender focus
+        on spiritual enlightenment and continue their tradition of monkhood and studying the universe and the spirits in their own way.
+      </p>
+      <h2>Notable Avatars</h2>
+      <p>
+        <b>Yangchen</b> was considered a great negotiator during her time as she solved many disputes between factions of humanity an the spirits interacting with humanity as well. There are
+        many statues dedicated to her throughout the Earth Kingdom for her work helping them with spirits and protecting them from marauding factions. Contrary to her spiritualistic nature, Yangchen
+        often took the sie of humanity in disputes with spirits, causing them to resent humanity and turn dark, leaving many issues for her successor.
+        <br>
+        <br>
+        <b>Aang</b> discovered he was the avatar at the age of twelve and ran away from the monastery shortly after due to the pressure and changes in his life. During his escape he fell pray to a
+        great storm an became sealed in an iceberg, protecting him from the genocide of his people but locking him away as the Fire Nation continued its conquest. After he was eventually freed
+        from the iceberg he worked with his newfound friends to stop the war and bring peace to the nations. Eventually he brought down the imperialistic Fire Lord and foged aliances between the
+        different bending nations.
+      </p>
+    </section>
+    <!-- Footer-->
+    <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Blake LaPoint 2020</div></footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
   </body>
 </html>
