--- a/earth.html
+++ b/earth.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
-  <body class="bg-success">
+  <body style="background-color: #283618;">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="index.html#page-top">Avatar</a>
@@ -29,5 +29,37 @@
             </div>
         </div>
     </nav>
+    <section class="wikitext">
+      <img src="assets/img/earth.png" alt="Symbol of Earthbenders" class="bendsymbols">
+      <h1>Earthbending</h1>
+      <p>
+        The largest nation among the four bending populations, the Earth Kingdom encompasses the entire main continent of the planet. It is commonly associate with strength and longevity,
+        with the capital city Ba Sing Se famously never being conquered by an invading army. Ba Sing Se finally fell due to an interior coup from their secret police designed by one of
+        the heirs of the Fire Nation, but withstood countless invasions prior to this due to having the largest military might alongside the Fire Nation.
+      </p>
+      <h2>Description</h2>
+      <p>
+        The original earth benders were the badgermoles, using it to tunnel through the crust in search for food and safety. Earthbenders are capable of many astonishing feats with their abilities,
+        they've been known to form the earth into armor aroun them, split the ground and raise vast walls, and even just use the ground to propel themselves along faster. There are several subivisions
+        within earthbending, depending on what they focus on manipulating. These subivisions range from bending lava to manipulating sand, and even altering metal itself. Metalbending was discovered
+        by Toph Beifong, a blind girl who learned earthbendng directly from the badgermoles and developed a refined seismic awareness to compensate for her blindness. There are even some earthbending
+        techniques capable of prolonging a benders life, possibly used by Bumi, king of Omashu, who lived through Aang's entire stay in the iceberg.
+      </p>
+      <h2>Notable Avatars</h2>
+      <p>
+        <b>Kyoshi</b> is the only named earthbending avatar. Widely considered to be one of the more violent avatars, she actually strived to maintain peace during her long reign as the avatar.
+        This long reign was compounded by her use of earthbending techniques to lengthen her lifetime, leading to her being the avatar for over 200 years and addressing many issues throughout the nation.
+        She was born to an air nomad mother, which may be the origin to her signature fans, which she used to protect her people from a royal set on conquering much of the Earth Kingodm as it was then.
+      </p>
+    </section>
+    <!-- Footer-->
+    <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Blake LaPoint 2020</div></footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
   </body>
 </html>
