--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <a class="mx-2" href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a class="mx-2" href="https://www.twitch.tv" target="_blank"><i class="fab fa-twitch"></i></a>
                     <a class="mx-2" href="https://www.snapchat.com" target="_blank"><i class="fab fa-snapchat"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a class="mx-2" href="https://github.com/lapoint-be/Final.git" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
