--- a/water.html
+++ b/water.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
-  <body class="bg-primary">
+  <body style="background-color: #294C60;">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="index.html#page-top">Avatar</a>
@@ -29,5 +29,43 @@
             </div>
         </div>
     </nav>
+    <section class="wikitext">
+      <img src="assets/img/water.png" alt="Symbol of Waterbenders" class="bendsymbols">
+      <h1>Waterbending</h1>
+      <p>
+        Divided between the waterbenders at the polar wastes and the denizens of the swamps, waterbender live a more tribal lifestyle, forgoing a fully regulated government. The most advanced group
+        among the waterbenders in the community at the northern pole which withstood the Fire Nation during the war as the southern tribe was devastated an stripped of almost all their waterbenders.
+        The swamp denizens focused more on a symbiotic nature with their surroundings, eliminating many trademarks of common society to focus on nature an their interactions with it.
+      </p>
+      <h2>Description</h2>
+      <p>
+        Water benders originally learned their abilities from how the moon affected the tides and the ocean as a whole. As such, most of their power is derived from the moon and its phases, making
+        them strongest during a full moon but stripping them of their abilities should anything happen to the moon spirit as the Fire Nation once attempted during their conquest. They are capable of
+        freezing the water around them to use as improvised weapons or to create the vast fortifications protecting the northern tribe. Some trong and specialized benders are even capable of bending
+        blood of people around them, althoug that is widely considered a horrendous crime and is forbidden htroughout the nations. Some of the swamp waterbenders have learned something similar,
+        but they focus on the water within the vines to allow them to control the plant life to varying degrees.
+      </p>
+      <h2>Notable Avatars</h2>
+      <p>
+        <b>Kuruk</b> was widely considered to have been and unsuccessful and hedonistic avatar uring his time. What isn't commonly known about him is how much he had to do to fix the issues created
+        by Yangchen favoring humanity over the spirits. Kuruk spent much of his lifetime protecting humanity from the dark spirits which left little time for him to help humanity itself, allowing
+        one of his trusted friends to gather their own power and become a corrupt power in the world.
+        <br>
+        <br>
+        <b>Korra</b> was born into a world of peace after Aang passed on, there were no new wars and no explicit reason to need an avatar. She spent her early life training the different bending
+        techniques, eventually going to study with Aang's sone the art of airbending. During her adventures she became embroiled in many political consequences and was unfortunately severed from
+        her past avatars during the great convergence when the dark spirit rose to conquer the world. She rebonded with the spirit of light, starting a new avatar cycle and working towards harmony
+        between the spirits and humanity.
+      </p>
+    </section>
+    <!-- Footer-->
+    <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Blake LaPoint 2020</div></footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
   </body>
 </html>
