--- a/air.html
+++ b/air.html
@@ -38,13 +38,16 @@
         are nearly impossible to reach if the traveller isn't an airbender, although Sozin managed to utilize the power of the comet to reach and raze each of the temples which left Aang as the
         last living airbender
       </p>
-      <h2>Description</h2>
+      <h2>Description</h2><a class="btn btn-secondary js-scroll-trigger topb" href="#">Return to Top</a>
       <p>
         Airbenders have been primarily pacifist since the very beginning of their bending tradition, due to this nature and their monastic lifestyle few if any airbenders turn towards violence.
         They first learned bending techniques from the air bison and how those moved through the sky, they focus on flowing movements and nimble dodges when forced to fight. Many airbender focus
         on spiritual enlightenment and continue their tradition of monkhood and studying the universe and the spirits in their own way.
       </p>
-      <h2>Notable Avatars</h2>
+      <img src="assets/img/Aang.gif" class="bendgif">
+      <br>
+      <br>
+      <h2>Notable Avatars</h2><a class="btn btn-secondary js-scroll-trigger topb" href="#">Return to Top</a>
       <p>
         <b>Yangchen</b> was considered a great negotiator during her time as she solved many disputes between factions of humanity an the spirits interacting with humanity as well. There are
         many statues dedicated to her throughout the Earth Kingdom for her work helping them with spirits and protecting them from marauding factions. Contrary to her spiritualistic nature, Yangchen
