--- a/earth.html
+++ b/earth.html
@@ -37,7 +37,7 @@
         with the capital city Ba Sing Se famously never being conquered by an invading army. Ba Sing Se finally fell due to an interior coup from their secret police designed by one of
         the heirs of the Fire Nation, but withstood countless invasions prior to this due to having the largest military might alongside the Fire Nation.
       </p>
-      <h2>Description</h2>
+      <h2>Description</h2><a class="btn btn-secondary js-scroll-trigger topb" href="#">Return to Top</a>
       <p>
         The original earth benders were the badgermoles, using it to tunnel through the crust in search for food and safety. Earthbenders are capable of many astonishing feats with their abilities,
         they've been known to form the earth into armor aroun them, split the ground and raise vast walls, and even just use the ground to propel themselves along faster. There are several subivisions
@@ -45,7 +45,10 @@
         by Toph Beifong, a blind girl who learned earthbendng directly from the badgermoles and developed a refined seismic awareness to compensate for her blindness. There are even some earthbending
         techniques capable of prolonging a benders life, possibly used by Bumi, king of Omashu, who lived through Aang's entire stay in the iceberg.
       </p>
-      <h2>Notable Avatars</h2>
+      <img src="assets/img/kyoshi.gif" class="bendgif">
+      <br>
+      <br>
+      <h2>Notable Avatars</h2><a class="btn btn-secondary js-scroll-trigger topb" href="#">Return to Top</a>
       <p>
         <b>Kyoshi</b> is the only named earthbending avatar. Widely considered to be one of the more violent avatars, she actually strived to maintain peace during her long reign as the avatar.
         This long reign was compounded by her use of earthbending techniques to lengthen her lifetime, leading to her being the avatar for over 200 years and addressing many issues throughout the nation.
