--- a/fire.html
+++ b/fire.html
@@ -37,7 +37,7 @@
         due to the nature of their element and how they focus their bending. Since fire is a force of destruction and primarily consumes rather than creates, this reputation has
         followed these benders throughout history from the very beginning of humanity learning to bend the elements.
       </p>
-      <h2>Description</h2>
+      <h2>Description</h2><a class="btn btn-secondary js-scroll-trigger topb" href="#">Return to Top</a>
       <p>
         With their power heavily associated with the sun and the heat within the depths of the earth, the first firebenders were taught to harness their power by studying dragons
         and how they moved. The first firebender to accomplish this feat and learn from the dragons was Wan who later went on to be the first Avatar. Firebending draws its power from the
@@ -47,9 +47,12 @@
         the fire lord who used this enhanced strength to conquer an destroy the air nomads, passes close by the planet. Some subdivisions of firebending include combustionbending, a highly
         focused and explosive form, and the ability to both generate and redirect lightning.
       </p>
-      <h2>Notable Avatars</h2>
+      <img src="assets/img/Roku.gif" class="bendgif">
+      <br>
+      <br>
+      <h2>Notable Avatars</h2><a class="btn btn-secondary js-scroll-trigger topb" href="#">Return to Top</a>
       <p>
-        <b>Wan</b> was the first firebender, and coincidentally the first avatar, to learn firebending from the dragons themselves and to receive the gift of firebending irectly from the great lion
+        <b>Wan</b> was the first firebender, and coincidentally the first avatar, to learn firebending from the dragons themselves and to receive the gift of firebending directly from the great lion
         turtles. He went on to become the first avatar, after acidentally releasing the spirit of darkness from its ancient conflict with the spirit of light, by bonding with the spirit of light to
         protect the balance in the world.
         <br>
@@ -58,7 +61,7 @@
         the authority of the Fire Lord and bring his control over nearly the entire population of firebenders.
         <br>
         <br>
-        <b>Roku</b> was the avatar directly before Aang, and while nothing overly notable occured uring his lifetime his life had repercussions for another century after his death. Roku's
+        <b>Roku</b> was the avatar directly before Aang, and while nothing overly notable occured during his lifetime his life had repercussions for another century after his death. Roku's
         friendship with the current Fire Lord, Sozin, led to him being to lenient on Sozin as he developed imperialistic notions and ultimately led to the Hundred Year War that Aang was forced
         to deal with uring his tenure as avatar.
       </p>
