--- a/water.html
+++ b/water.html
@@ -37,7 +37,7 @@
         among the waterbenders in the community at the northern pole which withstood the Fire Nation during the war as the southern tribe was devastated an stripped of almost all their waterbenders.
         The swamp denizens focused more on a symbiotic nature with their surroundings, eliminating many trademarks of common society to focus on nature an their interactions with it.
       </p>
-      <h2>Description</h2>
+      <h2>Description</h2><a class="btn btn-secondary js-scroll-trigger topb" href="#">Return to Top</a>
       <p>
         Water benders originally learned their abilities from how the moon affected the tides and the ocean as a whole. As such, most of their power is derived from the moon and its phases, making
         them strongest during a full moon but stripping them of their abilities should anything happen to the moon spirit as the Fire Nation once attempted during their conquest. They are capable of
@@ -45,7 +45,10 @@
         blood of people around them, althoug that is widely considered a horrendous crime and is forbidden htroughout the nations. Some of the swamp waterbenders have learned something similar,
         but they focus on the water within the vines to allow them to control the plant life to varying degrees.
       </p>
-      <h2>Notable Avatars</h2>
+      <img src="assets/img/Korra.gif" class="bendgif">
+      <br>
+      <br>
+      <h2>Notable Avatars</h2><a class="btn btn-secondary js-scroll-trigger topb" href="#">Return to Top</a>
       <p>
         <b>Kuruk</b> was widely considered to have been and unsuccessful and hedonistic avatar uring his time. What isn't commonly known about him is how much he had to do to fix the issues created
         by Yangchen favoring humanity over the spirits. Kuruk spent much of his lifetime protecting humanity from the dark spirits which left little time for him to help humanity itself, allowing
